--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -37,7 +37,7 @@ bottom: auto;
 padding-top:222px;
 }
 body .no-padding{
-padding-left: 0,
+padding-left: 0;
 padding-right: 0;
 }
 {% endblock %}
@@ -176,6 +176,13 @@ padding-right: 0;
         cart['pr' + a][0] = cart['pr' + a][0] - 1;
         cart['pr' + a][0] = Math.max(0, cart['pr' + a][0]);
         document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+        if (cart['pr' + a][0] == 0){
+            document.getElementById('divpr' + a).innerHTML='<button id="pr'+a+'" class="btn btn-primary cart">Add to Cart</button>'
+            delete cart['pr'+a];
+        }
+        else{
+            document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+        }
         updateCart(cart);
     });
     $('.divpr').on("click", "button.plus", function () {
