--- a/shop/templates/shop/tracker.html
+++ b/shop/templates/shop/tracker.html
@@ -50,10 +50,11 @@
             encode: true
         })
             .done(function (data) {
+                $('#citems').empty();
                 console.log(data)
                 data = JSON.parse(data)
-                updates = data[0];
-                if (updates.length > 0 & updates != {}) {
+                if (data['status'] == 'success') {
+                    updates = data['updates'];
                     for (i = 0; i < updates.length; i++) {
                         let text = updates[i]['text'];
                         let time = updates[i]['time'];
@@ -63,21 +64,20 @@
                     </li>`
                         $('#items').append(mystr);
                     }
-                } else {
+                    //Fill the Order Details
+                    cart = JSON.parse(data['itemsJson']);
+                    console.log(cart);
+                    for (item in cart) {
+                        let name = cart[item][1];
+                        let qty = cart[item][0];
+                        mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">${name}<span class="badge badge-primary badge-pill">${qty}</span></li>`
+                        $('#citems').append(mystr);
+                    }
+                }
+                else {
                     mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
                         Sorry, We are not able to fetch this order id and email. Make sure to type correct order Id and email</li>`
                     $('#items').append(mystr);
-                }
-                //Fill the Order Details
-                cart = JSON.parse(data[1]);
-                console.log(cart);
-                for (item in cart) {
-                    let name = cart[item][1];
-                    let qty = cart[item][0];
-                    mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
-                    ${name}
-                    <span class="badge badge-primary badge-pill">${qty}</span>
-                </li>`
                     $('#citems').append(mystr);
                 }
             });
